# folk-music-simulation

./: LICENSE.md  Main.hs  README.md  folk-music-simulation.cabal
