name:                folk-music-simulation
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
--license-file:        LICENSE
author:              Franz-Benjamin Mocnik
maintainer:          mocnik@uni-heidelberg.de
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable folk-music-simulation
    main-is:             Main.hs
    ghc-options:
        -O3
        -fno-warn-missing-fields
    build-depends:
        base >=4.9 && <4.10,
        array >= 0.5.1.1,
        bytestring >= 0.10.8.1,
        cassava >= 0.5.1.0,
        chorale >= 0.1.8,
        chorale-geo >= 0.1.2,
        random >= 1.1,
        random-shuffle >= 0.0.4,
        safe >= 0.3.16,
        text >= 1.2.2.1
    default-language:    Haskell2010
